--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "redux",
   "version": "3.6.0",
+  "private": true,
   "description": "Predictable state container for JavaScript apps",
   "browser": "dist/redux.js",
   "main": "lib/index.js",
